# necrophage

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/commands/: execute-todo.md  profile.md  qa-game.md
crates/necrophage-core/: Cargo.toml
crates/necrophage-core/src/: biomass.rs  camera.rs  combat.rs  dialogue.rs  lib.rs  movement.rs  npc.rs  player.rs  possession.rs  quest.rs
crates/necrophage-core/src/levels/: building.rs  district.rs  generator.rs  mod.rs
crates/necrophage-core/src/world/: mod.rs  tile.rs
crates/necrophage-gui/: Cargo.toml
crates/necrophage-gui/src/: biomass.rs  dialogue.rs  ending.rs  main.rs  movement.rs  npc.rs
crates/necrophage-gui/src/debug/: commands.rs  console.rs  inspector.rs  mod.rs  remote.rs
docs/: DEBUG.md  IMPLEMENTATION_PLAN.md  PRODUCT_PLAN.md  TODO.md
src/: biomass.rs  camera.rs  combat.rs  ending.rs  faction.rs  lib.rs  main.rs  menu.rs  minimap.rs  movement.rs  player.rs  population.rs  possession.rs  quest.rs  save.rs  swarm.rs
src/boss/: general.rs  harlan.rs  mod.rs  prophet.rs  varro.rs
src/debug/: commands.rs  console.rs  fps.rs
src/levels/: covenant.rs  district.rs  fortress.rs  generator.rs  hub.rs  jail.rs  mod.rs  precinct.rs  syndicate.rs  world.rs
src/world/: map.rs  mod.rs  tile.rs
tests/: ecs_integration.rs
