[package]
name = "necrophage"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.15", features = ["dynamic_linking"] }
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["debug"]
debug = ["dep:bevy-inspector-egui", "bevy/bevy_remote"]
headless = []
# Enable Chrome trace output: run with --no-default-features --features profile,
# then open the generated trace_event.json in chrome://tracing or Perfetto.
profile = ["bevy/trace", "dep:tracing-chrome", "dep:tracing-subscriber"]

[dependencies.bevy-inspector-egui]
version = "0.28"
optional = true

[dependencies.tracing-chrome]
version = "0.7"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
optional = true

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1
