[package]
name = "necrophage"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = "0.15"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["debug"]
debug = ["dep:bevy-inspector-egui", "bevy/bevy_remote"]

[dependencies.bevy-inspector-egui]
version = "0.28"
optional = true
